weather information updated

--- a/weather.html
+++ b/weather.html
@@ -15,9 +15,9 @@
             <a href="index.html" class="nav-logo">ValDoes.Work</a>
             <a id="nav-menu" class="nav-menu">&#9776;</a>
             <ul class="nav-list" id="nav">
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="ValerieLandguthResume.pdf" target="_blank">Resume</a></li>
+                <li><a href="index.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="ValerieLandguthResume.pdf" target="_blank">Resume</a></li>
             </ul>
         </div>
     </nav>
@@ -34,18 +34,10 @@
             <div>
                 <h3>Overview</h3>
             </div>
-            <p>A Weather.com experience for OpenCar which required researching the website contents and deciding what
-                would be relevant to a driver. I created an information architecture and wireframes based on my
-                research. Then I used the styleguide I made, to create visuals and a prototype version to present to the
-                stakeholders.</p>
-        </section>
-
-        <section class="copy">
-            <div>
-                <h3>Problem</h3>
-            </div>
-            <p>Condense the information on Weather.com to show the relevant information to a driver. Show the most
-                important information to a driver that can be viewed at a glance or more in depth at a quick stop</p>
+            <p>A Weather.com experience for Inrix OpenCar. Creating this experience required researching the current
+                Weather.com website contents and deciding what would be relevant to a driver. I created an information
+                architecture and wireframes based on my research. Then I used the styleguide I made, to create visuals
+                and a prototype version to present to the stakeholders </p>
         </section>
 
         <img class="head-pic" src="img/weatherarchitecture.png
@@ -65,7 +57,7 @@
             <div>
                 <h3>Research</h3>
             </div>
-            <p>Part of my process was to analyze the current applications that were being developed for
+            <p>My first step in researching was to look over the current applications that were being developed for
                 OpenCar to get context into the amount of information being shown to the drivers. Many of the OpenCar
                 apps were music apps and many of the apps have a search feature and a way to save playlists as
                 favorites.
@@ -88,7 +80,8 @@
 
         <img class="head-pic" src="img/weatherwireframes.png
         " alt="Rejected Layouts">
-        <h5 class="caption">Iterations of layouts that displayed the information less effectively than the layout that was shipped.</h5>
+        <h5 class="caption">Iterations of layouts that displayed the information less effectively than the layout that
+            was shipped.</h5>
 
         <section class="copy">
             <div>
@@ -101,14 +94,6 @@
                 page.
             </p>
         </section>
-
-        <section class="copy">
-                <div>
-                    <h3>Solution</h3>
-                </div>
-                <p>
-                </p>
-            </section>
     </main>
 
     <footer>
