new content for spaced and weather

--- a/spaced.html
+++ b/spaced.html
@@ -26,7 +26,7 @@
         <img class="head-pic" src="img/spacedcoverimg.jpg
             " alt="Weather.com OpenCar">
         <h1>SPACED</h1>
-        <p>An exploration in User Research and UI Design</p>
+        <p>An exploration in UI Design</p>
     </header>
 
     <main>
@@ -34,27 +34,20 @@
             <div>
                 <h3>Overview</h3>
             </div>
-            <p>The SPACED challenge was about designing either a logo, a website, or an app for a fictional space travel
-                company that takes passengers to different destinations in our galaxy in one day, and back to Earth
-                safely. This project was an opportunity for me to grow my UI skills and get feedback from a
-                professional.</p>
+            <p>SPACED was a competition hosted by Dann Petty I participated in as a student. The challenge was to create
+                a logo, homepage, or app for a fictional company called SPACED. I decided to design a homepage for my
+                entry into the competition. This project was an opportunity for me to grow my UI skills and get feedback
+                from a professional.</p>
         </section>
 
         <section class="copy">
             <div>
-                <h3>Problem</h3>
+                <h3>Goals</h3>
             </div>
-            <p>The fictional company SPACED needs a website to start taking bookings, showcase their amenities, and
-                create brand awareness for their new company.</p>
-        </section>
-
-        <section class="copy">
-            <div>
-                <h3>Research</h3>
-            </div>
-            <p>Based on the requirements listed in the challenge and existing travels sites, I decided the SPACED
-                website needed a way to show destinations, a booking bar, featured booking packages, description of
-                amenities, a way to show satisfied customers, and an email sign up. </p>
+            <p>The main goals of the homepage were to have a place for customers to book travel, create brand awareness,
+                and showcase their featured travel packages. Some secondary goals of their homepage were to show the
+                amenities and safety features the company provides, get people to sign up for SPACED’s email list, and
+                see customer testimonials.</p>
         </section>
 
         <img class="head-pic" src="img/spacedremixing.jpg
