--- a/weather.html
+++ b/weather.html
@@ -48,7 +48,7 @@
             <div>
                 <h3>Information Architecture</h3>
             </div>
-            <p>My first step was to take inventory of the weather information on the Weather.com desktop site, mobile
+            <p>I started my process by taking inventory of the weather information on the Weather.com desktop site, mobile
                 site, and application. As well as look at the information provided to me by the OpenCar team,
                 detailing the content deemed important by the stakeholders and Weather.com.</p>
         </section>
@@ -72,7 +72,7 @@
             <div>
                 <h3>Competitors</h3>
             </div>
-            <p>My next step was to look at existing connect car applications like Android Auto (Carplay does not
+            <p>My next step was to look at existing connected car applications like Android Auto (Carplay does not
                 support weather applications yet). I found most apps for weather information for connected car systems
                 had cluttered screens full of information that wasn’t relevant to a driver.
             </p>
