--- a/game.html
+++ b/game.html
@@ -37,7 +37,7 @@
             <p>Splash is a kids game with digital component. The purpose of this project was to practice research
                 techniques both before and after prototyping. SPLASH is a game made for kids between the ages of 6-12
                 years old. The game can be played with or without the app. This project provided a lot of insight into
-                the importance of usability testing on the target market.</p>
+                the importance of conducting usability testing with the target market.</p>
         </section>
 
         <section class="copy">
