--- a/spaced.html
+++ b/spaced.html
@@ -26,7 +26,7 @@
         <img class="head-pic" src="img/spacedcoverimg.jpg
             " alt="Weather.com OpenCar">
         <h1>SPACED</h1>
-        <p>An exploration in UI Design</p>
+        <p>An exploration in UI Design, HTML, CSS</p>
     </header>
 
     <main>
@@ -58,10 +58,28 @@
             <div>
                 <h3>Wireframing by Remixing</h3>
             </div>
-            <p>I started by looking at other travel successful travel and booking websites to see how some websites
-                currently organize information and help people book travel.</p>
+            <p>I started my research by looking at existing travel homepages, specifically other website’s ways of
+                having customers book travel. I pieced together the elements from existing websites to create a
+                wireframe for the SPACED homepage. </p>
         </section>
 
+        <section class="copy">
+            <div>
+                <h3>Visual Design</h3>
+            </div>
+            <div>
+                <p>My goal was to make the center of focus the planets that SPACED has available for travel in a way
+                    that resembles the solar system. The selected planet is the largest and is highlighted while the other
+                    planets are smaller and resemble a circular formation. I was also very inspired by the rings that
+                    some of the planets have, so I decided to use a ring as a selected state.</p>
+
+                <p>SPACED was looking for one accent color to be apart of the brand. I decided to go with a bright
+                    modern color that contrasts well with a dark background. I chose a modern font with very circular
+                    counter forms, Montserrat. I also tilted or italicized some of the text to simulate fast movement,
+                    like space travel.</p>
+                    
+            </div>
+        </section>
     </main>
 
     <footer>
