--- a/spaced.html
+++ b/spaced.html
@@ -69,16 +69,33 @@
             </div>
             <div>
                 <p>My goal was to make the center of focus the planets that SPACED has available for travel in a way
-                    that resembles the solar system. The selected planet is the largest and is highlighted while the other
+                    that resembles the solar system. The selected planet is the largest and is highlighted while the
+                    other
                     planets are smaller and resemble a circular formation. I was also very inspired by the rings that
                     some of the planets have, so I decided to use a ring as a selected state.</p>
-
+                <br>
                 <p>SPACED was looking for one accent color to be apart of the brand. I decided to go with a bright
                     modern color that contrasts well with a dark background. I chose a modern font with very circular
                     counter forms, Montserrat. I also tilted or italicized some of the text to simulate fast movement,
                     like space travel.</p>
-                    
+                <a href="https://projects.invisionapp.com/share/T8KWVWJZ29K#/screens">
+                    <div class="btn">View InVision Prototype →</div>
+                </a>
+
             </div>
+
+            <section class="copy">
+                <div>
+                    <h3>HTML and CSS/h3>
+                </div>
+                <div>
+                    <p>After the competition had ended, I used the design that I made to practice my HTML and CSS skills
+                        and made the prototype into a website. </p>
+                        <a href="https://vlandguth.github.io/spaced/">
+                            <div class="btn">View Live Homepage →</div>
+                        </a>
+                </div>
+            </section>
         </section>
     </main>
 
