--- a/spaced.html
+++ b/spaced.html
@@ -84,9 +84,11 @@
 
             </div>
 
+        </section>
+
             <section class="copy">
                 <div>
-                    <h3>HTML and CSS/h3>
+                    <h3>HTML and CSS</h3>
                 </div>
                 <div>
                     <p>After the competition had ended, I used the design that I made to practice my HTML and CSS skills
