added prototype link

--- a/game.html
+++ b/game.html
@@ -100,10 +100,15 @@
             <div>
                 <h3>Digital Component</h3>
             </div>
+            <div>
             <p>It was important to make the phone app for the game something that added to the game when it was used,
                 but didn’t feel like something was missing when you didn’t have it. The app adds a spinner which is a
                 way to change the difficulty level, adds a scoreboard and way to tally, and continues the visual theme.
             </p>
+            <a href="https://projects.invisionapp.com/share/4ROE0JYXVPW#/screens">
+                <div class="btn">View App InVision Prototype →</div>
+            </a>
+        </div>
         </section>
 
 
