weather.com process v1

--- a/weather.html
+++ b/weather.html
@@ -37,7 +37,7 @@
             <p>A Weather.com experience for Inrix OpenCar. Creating this experience required researching the current
                 Weather.com website contents and deciding what would be relevant to a driver. I created an information
                 architecture and wireframes based on my research. Then I used the styleguide I made, to create visuals
-                and a prototype version to present to the stakeholders </p>
+                and a prototype version to present to the stakeholders. </p>
         </section>
 
         <img class="head-pic" src="img/weatherarchitecture.png
@@ -48,8 +48,8 @@
             <div>
                 <h3>Information Architecture</h3>
             </div>
-            <p>I started my process by taking inventory of the weather information on the Weather.com desktop site, mobile
-                site, and application. As well as look at the information provided to me by the OpenCar team,
+            <p>I started my process by taking inventory of the weather information on the Weather.com desktop site,
+                mobile site, and application. As well as looking at the information provided to me by the OpenCar team,
                 detailing the content deemed important by the stakeholders and Weather.com.</p>
         </section>
 
@@ -59,7 +59,7 @@
             </div>
             <p>My first step in researching was to look over the current applications that were being developed for
                 OpenCar to get context into the amount of information being shown to the drivers. Many of the OpenCar
-                apps were music apps and many of the apps have a search feature and a way to save playlists as
+                apps were music apps an they have a search feature and a way to save playlists as
                 favorites.
             </p>
         </section>
@@ -73,7 +73,7 @@
                 <h3>Competitors</h3>
             </div>
             <p>My next step was to look at existing connected car applications like Android Auto (Carplay does not
-                support weather applications yet). I found most apps for weather information for connected car systems
+                support weather applications). I found most apps for weather information for connected car systems
                 had cluttered screens full of information that wasn’t relevant to a driver.
             </p>
         </section>
@@ -92,6 +92,26 @@
                 current weather, a list of supplementary information, a way to favorite/unfavorite locations, a list of
                 favorited locations, a search bar, list of recently searched locations, and an overview on a separate
                 page.
+            </p>
+        </section>
+
+        <section class="copy">
+            <div>
+                <h3>Iterating</h3>
+            </div>
+            <p>The OpenCar Weather.com experience went through many review sessions with the design team, the
+                developers, and stakeholders and the final version was approved by all parties including the client.
+            </p>
+        </section>
+
+        <section class="copy">
+            <div>
+                <h3>Final Thoughts</h3>
+            </div>
+            <p>I learned from this project not to fall in love with the first version and to continue to improve the
+                experience by asking for feedback. During this project, I improved my presentation skills in high
+                pressure situations because I was often presenting to managers and once the CEO of the company came to
+                see my presentation of the current version.
             </p>
         </section>
     </main>
