--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </nav>
   <header>
       <h1>Valerie is a <span class="type-it"></span></h1>
-      <h3>Currently seeking full time positions in the Seattle Area</h3>
+      <h3>Currently seeking full time New Graduate Positions in the North West</h3>
   </header>
   <main class="home">
     <section class="project">
@@ -46,7 +46,7 @@
       </div>
       <div class="blurb">
         <h3>Interaction Design</h3>
-        <h2>SPLASH!:UX Kids Game</h2>
+        <h2>SPLASH!: UX Kids Game</h2>
         <a href="game.html"><div class="btn">View Process →</div></a>
       </div>
     </section>
