Usability Test Page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </div>
   </nav>
   <header>
-      <h1>Valerie is a <span class="type-it"></span></h1>
-      <h3>Currently seeking full time New Graduate Positions in the North West</h3>
+      <h1>Valerie is a <span class="type-it">UX Designer</span></h1>
+      <h3>Currently seeking full time Design Jobs in the North West</h3>
   </header>
   <main class="home">
     <section class="project">
@@ -36,6 +36,18 @@
         <h3>UI Design</h3>
         <h2>SPACED</h2>
         <a href="spaced.html"><div class="btn">View Process →</div></a>
+      </div>
+    </section>
+    <section class="project">
+      <div class="card">
+        <div class="zoom">
+          <img src="img/usabilitytestingcoverimg.jpg" alt="">
+        </div>
+      </div>
+      <div class="blurb">
+        <h3>Usability Testing</h3>
+        <h2>INRIX Open Car : Yelp and Napster</h2>
+        <a href="usabilitytest.html"><div class="btn">View Process →</div></a>
       </div>
     </section>
     <section class="project">
