Usabilty Test img

--- a/usabilitytest.html
+++ b/usabilitytest.html
@@ -23,8 +23,8 @@
     </nav>
 
     <header>
-        <img class="head-pic" src="img/weathercoverimg.jpg
-        " alt="Weather.com OpenCar">
+        <img class="head-pic" src="img/utcoverimg.jpg
+        " alt="Note Taking">
         <h1>OpenCar Usability Testing</h1>
         <p>Case Study identifying common user confusion in two OpenCar applications: Yelp and Napster</p>
     </header>
@@ -34,6 +34,8 @@
             <div>
                 <h3>Overview</h3>
             </div>
+            <p>Case Study currently in progress. Please check back later.</p>
+            </section>
 
     </main>
 
