full clickable divs in home

--- a/index.html
+++ b/index.html
@@ -22,58 +22,58 @@
     </div>
   </nav>
   <header>
-      <h1>Valerie is a <span class="type-it">UX Designer</span></h1>
-      <h3>Currently seeking full time Design Jobs in the North West</h3>
+    <h1>Valerie is a <span class="type-it">UX Designer</span></h1>
+    <h3>Currently seeking full time Design Jobs in the North West</h3>
   </header>
   <main class="home">
-    <section class="project">
-      <div class="card">
-        <div class="zoom">
+    <a href="spaced.html">
+      <section class="project">
+        <div class="card">
           <img src="/img/SPACEDblue_mockup.jpg" alt="">
         </div>
-      </div>
-      <div class="blurb">
-        <h3>UI Design</h3>
-        <h2>SPACED</h2>
-        <a href="spaced.html"><div class="btn">View Process →</div></a>
-      </div>
-    </section>
-    <section class="project">
-      <div class="card">
-        <div class="zoom">
+        <div class="blurb">
+          <h3>UI Design</h3>
+          <h2>SPACED</h2>
+          <div class="btn">View Process →</div>
+        </div>
+      </section>
+    </a>
+    <a href="usabilitytest.html">
+      <section class="project">
+        <div class="card">
           <img src="img/usabilitytestingcoverimg.jpg" alt="">
         </div>
-      </div>
-      <div class="blurb">
-        <h3>Usability Testing</h3>
-        <h2>INRIX Open Car : Yelp and Napster</h2>
-        <a href="usabilitytest.html"><div class="btn">View Process →</div></a>
-      </div>
-    </section>
-    <section class="project">
-      <div class="card">
-        <div class="zoom">
+        <div class="blurb">
+          <h3>Usability Testing</h3>
+          <h2>INRIX Open Car : Yelp and Napster</h2>
+          <div class="btn">View Process →</div>
+        </div>
+      </section>
+    </a>
+    <a href="game.html">
+      <section class="project">
+        <div class="card">
           <img src="/img/gamethumbnail.jpg" alt="">
         </div>
-      </div>
-      <div class="blurb">
-        <h3>Interaction Design</h3>
-        <h2>SPLASH!: UX Kids Game</h2>
-        <a href="game.html"><div class="btn">View Process →</div></a>
-      </div>
-    </section>
-    <section class="project">
-      <div class="card">
-        <div class="zoom">
+        <div class="blurb">
+          <h3>Interaction Design</h3>
+          <h2>SPLASH!: UX Kids Game</h2>
+          <div class="btn">View Process →</div>
+        </div>
+      </section>
+    </a>
+    <a href="weather.html">
+      <section class="project">
+        <div class="card">
           <img src="/img/weatherthumbnail.jpg" alt="">
         </div>
-      </div>
-      <div class="blurb">
-        <h3>UX Design</h3>
-        <h2>OpenCar Weather.com</h2>
-        <a href="weather.html"><div class="btn">View Process →</div></a>
-      </div>
-    </section>
+        <div class="blurb">
+          <h3>UX Design</h3>
+          <h2>OpenCar Weather.com</h2>
+          <div class="btn">View Process →</div>
+        </div>
+      </section>
+    </a>
   </main>
 
   <footer>
