--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
         </div>
       </section>
     </a>
+    <a href="wmt.html">
+        <section class="project">
+          <div class="card">
+            <img src="img/wmtcoverimg.png" alt="Where'z My Trailer">
+          </div>
+          <div class="blurb">
+            <h3>UX/UI Design</h3>
+            <h2>Where'z My Trailer</h2>
+            <div class="btn">View Process →</div>
+          </div>
+        </section>
+      </a>
     <a href="game.html">
       <section class="project">
         <div class="card">
