--- a/wmt.html
+++ b/wmt.html
@@ -23,40 +23,15 @@
     </nav>
 
     <header>
-        <img class="head-pic" src="img/utcoverimg.jpg
-        " alt="Note Taking">
-        <h1>OpenCar Usability Testing</h1>
-        <p>Case Study identifying common user confusion in two OpenCar applications: Yelp and Napster</p>
+        <h1>Where'z My Trailer</h1>
+        <p>Mobile experience for managing yard inventory and operations.</p>
     </header>
 
     <main>
         <section class="copy">
             <div>
-                <h3>Overview</h3>
+                <h3>Currently in Progress</h3>
             </div>
-            <p>Usability testing conducted on two existing OpenCar applications: Yelp and Napster. The 6 participants
-                were INRIXs employees who had no involvement with the connected-car section of INRIX. All participants
-                were volunteers and gave about 25 minutes of their time during the testing. </p>
-        </section>
-
-        <section class="copy">
-            <div>
-                <h3>Goals</h3>
-            </div>
-            <div>
-                <h4>Discover:</h4>
-                <h4>How easy it is to navigate through each app?</h4>
-                <h4>Where are the points of confusion in the app for the user?</h4>
-            </div>
-        </section>
-
-        <section class="copy">
-            <div>
-                <h3>Overview</h3>
-            </div>
-            <p>Usability testing conducted on two existing OpenCar applications: Yelp and Napster. The 6 participants
-                were INRIXs employees who had no involvement with the connected-car section of INRIX. All participants
-                were volunteers and gave about 25 minutes of their time during the testing. </p>
         </section>
 
     </main>
