--- a/usabilitytest.html
+++ b/usabilitytest.html
@@ -18,6 +18,7 @@
                 <li><a href="index.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="ValerieLandguthResume.pdf" target="_blank">Resume</a></li>
+                <li><a href="https://medium.com/@valerie.landguth" target="_blank">Blog</a></li>
             </ul>
         </div>
     </nav>
@@ -52,12 +53,68 @@
 
         <section class="copy">
             <div>
-                <h3>Overview</h3>
+                <h3>Participants</h3>
             </div>
             <p>Usability testing conducted on two existing OpenCar applications: Yelp and Napster. The 6 participants
                 were INRIXs employees who had no involvement with the connected-car section of INRIX. All participants
-                were volunteers and gave about 25 minutes of their time during the testing. </p>
+                were volunteers and gave about 25 minutes of their time during the interview. </p>
         </section>
+
+        <section class="copy">
+            <div>
+                <h3>Script</h3>
+            </div>
+            <div>
+                <p>I wrote a script for both OpenCar applications based off of the user stories written by the design
+                    team and development team to test if the user could complete these tasks without any assistance. The
+                    script helped me to not prompt the user if they were to get stuck and to let them navigate through
+                    the app. </p>
+                <a href="https://drive.google.com/drive/folders/1QwXtEyAmOBBK8zJQ4gGGd5yxglADGmy3?usp=sharing">
+                    <div class="btn">Read Scripts →</div>
+                </a>
+            </div>
+        </section>
+
+        <section class="copy">
+            <div>
+                <h3>Napster Prompts</h3>
+            </div>
+            <ul>
+                <li>Play the Song of the Day Featured Playlist</li>
+                <li>Play a Popular Track and add it to your favorites</li>
+                <li>Add a track from New Releases to any Playlist</li>
+                <li>Search for a track called ’Malibu’ and play the track radio for the song</li>
+                <li>Find a Rock Station and add it to my library</li>
+            </ul>
+        </section>
+
+        <img class="head-pic" src="img/usabilityratings.jpg
+        " alt="Rating System for Problems Identited">
+        <h5 class="caption">Rating system for problems discovered during usability testing.</h5>
+
+        <section class="copy">
+                <div>
+                    <h3>Napster Results</h3>
+                </div>
+                <ul>
+                    
+                </ul>
+            </section>
+
+        <section class="copy">
+            <div>
+                <h3>Yelp Prompts</h3>
+            </div>
+            <ul>
+                <li>Play the Song of the Day Featured Playlist</li>
+                <li>Play a Popular Track and add it to your favorites</li>
+                <li>Add a track from New Releases to any Playlist</li>
+                <li>Search for a track called ’Malibu’ and play the track radio for the song</li>
+                <li>Find a Rock Station and add it to my library</li>
+            </ul>
+        </section>
+
+
 
     </main>
 
