--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="index.html">Work</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="ValerieLandguthResume.pdf" target="_blank">Resume</a></li>
+        <li><a href="https://medium.com/@valerie.landguth" target="_blank">Blog</a></li>
       </ul>
     </div>
   </nav>
