--- a/usabilitytest.html
+++ b/usabilitytest.html
@@ -84,11 +84,11 @@
                 <h3>Napster Prompts and Results</h3>
             </div>
             <ul>
-                <li>Play the Song of the Day Featured Playlist - <em>Difficulty: 3.2 Confidence:5.4</em></li>
-                    <li>Play a Popular Track and add it to your favorites - <em>Difficulty: 1.6 Confidence:5.8</em>/li>
-                    <li>Add a track from New Releases to any Playlist - <em>Difficulty: 2 Confidence:5.25</em></li>
-                    <li>Search for a track called ’Malibu’ and play the track radio for the song - <em>Difficulty: 5.5 Confidence:2.67</em></li>
-                    <li>Find a Rock Station and add it to my library - <em>Difficulty: 2.4 Confidence:6</em></li>
+                <li>Play the Song of the Day Featured Playlist - <b>Difficulty: 3.2 Confidence:5.4</b></li>
+                    <li>Play a Popular Track and add it to your favorites - <b></em>Difficulty: 1.6 Confidence:5.8</b>/li>
+                    <li>Add a track from New Releases to any Playlist - <b>Difficulty: 2 Confidence:5.25</b></li>
+                    <li>Search for a track called ’Malibu’ and play the track radio for the song - <b>Difficulty: 5.5 Confidence:2.67</b></li>
+                    <li>Find a Rock Station and add it to my library - <b>Difficulty: 2.4 Confidence:6</b></li>
             </ul>
         </section>
 
@@ -97,11 +97,11 @@
                 <h3>Yelp Prompts</h3>
             </div>
             <ul>
-                <li>Find the closest coffee shop and bookmark it - <em>Difficulty: 2.167 Confidence:5.5</em></li>
-                <li>Navigate to the Nearest Gas Station - <em>Difficulty: 2 Confidence:5.3</em></li>
-                <li>Search for the nearest starbucks and find the reviews page - <em>Difficulty: 2.25 Confidence:5.5</em></li>
-                <li>Find the Hours of the Bellevue Botanical Garden - <em>Difficulty: 3.8 Confidence:4.2</em></li>
-                <li>Find the Highest Rated Bar in Lynnwood, WA - <em>Difficulty: 5 Confidence:3</em></li>
+                <li>Find the closest coffee shop and bookmark it - <b>Difficulty: 2.167 Confidence:5.5</b></li>
+                <li>Navigate to the Nearest Gas Station - <b>Difficulty: 2 Confidence:5.3</b></li>
+                <li>Search for the nearest starbucks and find the reviews page - <b>Difficulty: 2.25 Confidence:5.5</b></li>
+                <li>Find the Hours of the Bellevue Botanical Garden - <b>Difficulty: 3.8 Confidence:4.2</b></li>
+                <li>Find the Highest Rated Bar in Lynnwood, WA - <b>Difficulty: 5 Confidence:3</b></li>
             </ul>
         </section>
 
