--- a/usabilitytest.html
+++ b/usabilitytest.html
@@ -85,7 +85,7 @@
             </div>
             <ul>
                 <li>Play the Song of the Day Featured Playlist - <b>Difficulty: 3.2 Confidence: 5.4</b></li>
-                    <li>Play a Popular Track and add it to your favorites - <b></em>Difficulty: 1.6 Confidence: 5.8</b>/li>
+                    <li>Play a Popular Track and add it to your favorites - <b></em>Difficulty: 1.6 Confidence: 5.8</b></li>
                     <li>Add a track from New Releases to any Playlist - <b>Difficulty: 2 Confidence: 5.25</b></li>
                     <li>Search for a track called ’Malibu’ and play the track radio for the song - <b>Difficulty: 5.5 Confidence: 2.67</b></li>
                     <li>Find a Rock Station and add it to my library - <b>Difficulty: 2.4 Confidence: 6</b></li>
