new thumbnail on home page

--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
         </div>
       </section>
     </a>
+    <a href="courseevals.html">
+      <section class="project">
+        <div class="card">
+          <img src="img/courseevalthumbnail.jpg" alt="Course Evaulation">
+        </div>
+        <div class="blurb">
+          <h3>Course Evaulation Redesign</h3>
+          <h2>Mobile App Design</h2>
+          <div class="btn">View Process →</div>
+        </div>
+      </section>
+    </a>
     <a href="wmt.html">
         <section class="project">
           <div class="card">
