--- a/courseevals.html
+++ b/courseevals.html
@@ -40,6 +40,10 @@
             </p>
         </section>
 
+        <img class="head-pic" src="img/courseevalexample.jpg
+        " alt="Course Evaluation Form">
+        <h5 class="caption">An example of the current course evaluation forms</h5>
+
 
 
         <section class="copy">
@@ -58,7 +62,7 @@
 
         <section class="copy">
             <div>
-                <h3>Solution/h3>
+                <h3>Solution</h3>
             </div>
             <div>
                 <p>My goal was to create a more visual way to rate each class that would be quick and easy for the
@@ -76,10 +80,7 @@
             </div>
         </section>
 
-        <img class="head-pic" src="img/courseevalexample.jpg
-        " alt="Course Evaluation Form">
-        <h5 class="caption">An example of the current course evaluation forms</h5>
-
+    
         <section class="copy">
             <div>
                 <h3>Future Features</h3>
