no more region lock ;)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </nav>
   <header>
     <h1>Valerie is a <span class="type-it">UX Designer</span></h1>
-    <h3>Currently seeking full time Design Jobs in the North West</h3>
+    <h3>Currently seeking full time Design Jobs</h3>
   </header>
   <main class="home">
     <a href="spaced.html">
