Invision Embeds + Home Page Order Change

--- a/courseevals.html
+++ b/courseevals.html
@@ -52,9 +52,12 @@
             </div>
             <div>
                 <p>Course Evaluations at Eastern Washington University are currently filled out on paper and then handed
-                    off to an office aid who has to manually enter the information into the computer. The rating system is on a
-                    one to five scale which isn’t very descriptive and doesn’t give a reference point. The professor leaves
-                    the classroom when the evaluations are being filled out, often students just leave without filling out
+                    off to an office aid who has to manually enter the information into the computer. The rating system
+                    is on a
+                    one to five scale which isn’t very descriptive and doesn’t give a reference point. The professor
+                    leaves
+                    the classroom when the evaluations are being filled out, often students just leave without filling
+                    out
                     the form. This makes the data less accurate because the whole class isn’t being represented. </p>
             </div>
 
@@ -74,13 +77,16 @@
                     is internet access. Because the data is now digital the, an office aid doesn’t not have to spend
                     countless hours entering data to a spreadsheet, which optimizes the experience. </p>
 
-                    <a href="https://invis.io/QVL3NYL9TAE#/302157489_Input">
-                        <div class="btn">View InVision Prototype →</div>
-                    </a>
+                <a href="https://invis.io/QVL3NYL9TAE#/302157489_Input">
+                    <div class="btn">View InVision Prototype →</div>
+                </a>
             </div>
         </section>
 
-    
+        <section class="invision-wrapper">
+            <iframe width="438" height="930" src="//invis.io/9VOE0LTDU8X" frameborder="0" allowfullscreen></iframe>
+        </section>
+
         <section class="copy">
             <div>
                 <h3>Future Features</h3>
