--- a/game.html
+++ b/game.html
@@ -97,6 +97,10 @@
             </p>
         </section>
 
+        <section class="invision-wrapper">
+            <iframe width="442" height="935" src="//invis.io/JUKWXTCDN2Z" frameborder="0" allowfullscreen></iframe>
+        </section>
+
         <section class="copy">
             <div>
                 <h3>Digital Component</h3>
