--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul class="nav-list" id="nav">
         <li><a href="index.html">Work</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="ValerieLandguthResume.pdf" target="_blank">Resume</a></li>
+        <li><a href="ValerieLandguthResume2020.pdf" target="_blank">Resume</a></li>
         <li><a href="https://medium.com/@valerie.landguth" target="_blank">Blog</a></li>
       </ul>
     </div>
