--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <li><a href="index.html">Work</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="ValerieLandguthResume2020.pdf" target="_blank">Resume</a></li>
-        <li><a href="https://medium.com/@valerie.landguth" target="_blank">Blog</a></li>
-      </ul>
+        <li><a href="https://www.valerienoelphotography.com/" target="_blank">Photograhpy</a></li>
     </div>
   </nav>
   <header>
