--- a/wmt.html
+++ b/wmt.html
@@ -24,104 +24,37 @@
     </nav>
 
     <header>
+        <h3>* This project is still in development. For information regarding the wireframes and source material,
+            please contact me at valerie.landguth@gmail.com *</h3>
+        <img class="head-pic" src="img/wmtcoverimg.jpg
+        " alt="Weather.com OpenCar">
         <h1>Where'z My Trailer</h1>
-        <p>Mobile experience for managing yard inventory and operations.</p>
+        <p>Mobile App Design for Yard Managment System</p>
     </header>
 
     <main>
+
         <section class="copy">
             <div>
                 <h3>Overview</h3>
             </div>
-            <p>A Weather.com experience for Inrix OpenCar. Creating this experience required researching the current
-                Weather.com website contents and deciding what would be relevant to a driver. I created an information
-                architecture and wireframes based on my research. Then I used the styleguide I made, to create visuals
-                and a prototype version to present to the stakeholders. </p>
+            <p>Where’z My Trailer is an Yard Management System for independently owned warehouses and shipping yards.
+                Where’z My Trailer seeks to solve the problem of tracking assets manually within the warehouse as well
+                as a lack of organization of information. My role in the production of this application was to turn user
+                stories into wireframes to start creating a presentable prototype for potential investors. </p>
         </section>
 
-        <img class="head-pic" src="img/weatherarchitecture.png
-        " alt="Information Architecture">
-        <h5 class="caption">Information Architecture based on the User Stories from the Stakeholders</h5>
-
-        <section class="copy">
-            <div>
-                <h3>Information Architecture</h3>
-            </div>
-            <p>I started my process by taking inventory of the weather information on the Weather.com desktop site,
-                mobile site, and application. As well as looking at the information provided to me by the OpenCar team,
-                detailing the content deemed important by the stakeholders and Weather.com.</p>
-        </section>
 
         <section class="copy">
             <div>
                 <h3>Research</h3>
             </div>
-            <p>My first step in researching was to look over the current applications that were being developed for
-                OpenCar to get context into the amount of information being shown to the drivers. Many of the OpenCar
-                apps were music apps an they have a search feature and a way to save playlists as
-                favorites.
+            <p>My research consisted of reviewing the current process that is used at the test warehouse. This involved
+                talking with the onsite managers for the warehouse and reviewing the paper forms currently in use that
+                Where’z My Trailer plans to replace with an online experience.
             </p>
         </section>
 
-        <img class="head-pic" src="img/androidautoweather.jpg
-        " alt="Competitors Connected Car Weather">
-        <h5 class="caption">Competitors Connected Car Weather Applications</h5>
-
-        <section class="copy">
-            <div>
-                <h3>Competitors</h3>
-            </div>
-            <p>My next step was to look at existing connected car applications like Android Auto (Carplay does not
-                support weather applications). I found most apps for weather information for connected car systems
-                had cluttered screens full of information that wasn’t relevant to a driver.
-            </p>
-        </section>
-
-        <img class="head-pic" src="img/weatherwireframes.png
-        " alt="Rejected Layouts">
-        <h5 class="caption">Iterations of layouts that displayed the information less effectively than the layout that
-            was shipped.</h5>
-
-        <section class="copy">
-            <div>
-                <h3>Wireframing a New Chamber</h3>
-            </div>
-            <p>The next challenge I faced was creating a new chamber or layout for OpenCar specifically suited for
-                weather apps and other future apps. As a design team we decided this new chamber needed to have the
-                current weather, a list of supplementary information, a way to favorite/unfavorite locations, a list of
-                favorited locations, a search bar, list of recently searched locations, and an overview on a separate
-                page.
-            </p>
-        </section>
-
-        <section class="copy">
-            <div>
-                <h3>Iterating</h3>
-            </div>
-            <div>
-            <p>The OpenCar Weather.com experience went through many review sessions with the design team, the
-                developers, and stakeholders and the final version was approved by all parties including the client.
-            </p>
-            <a href="https://projects.invisionapp.com/share/VJKWX6HUX48#/screens">
-                <div class="btn">View InVision Prototype →</div>
-            </a>
-        </div>
-        </section>
-
-        <section class="invision-wrapper">
-            <iframe width="972" height="720" src="//invis.io/DMKWX6IGVKB" frameborder="0" allowfullscreen></iframe>
-        </section>
-
-        <section class="copy">
-            <div>
-                <h3>Final Thoughts</h3>
-            </div>
-            <p>I learned from this project not to fall in love with the first version and to continue to improve the
-                experience by asking for feedback. During this project, I improved my presentation skills in high
-                pressure situations because I was often presenting to managers and once the CEO of the company came to
-                see my presentation of the current version.
-            </p>
-        </section>
     </main>
 
     <footer>
