--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
         </div>
       </section>
     </a>
+    <a href="wmt.html">
+      <section class="project">
+        <div class="card">
+          <img src="img/wmtcoverimg.png" alt="Where'z My Trailer">
+        </div>
+        <div class="blurb">
+          <h3>Wireframing App Concept</h3>
+          <h2>Where'z My Trailer</h2>
+          <div class="btn">View Process →</div>
+        </div>
+      </section>
+    </a>
+    <a href="usabilitytest.html">
+      <section class="project">
+        <div class="card">
+          <img src="img/usabilitytestingcoverimg.jpg" alt="">
+        </div>
+        <div class="blurb">
+          <h3>Usability Testing</h3>
+          <h2>INRIX Open Car : Yelp and Napster</h2>
+          <div class="btn">View Process →</div>
+        </div>
+      </section>
+    </a>
     <a href="spaced.html">
       <section class="project">
         <div class="card">
@@ -62,31 +86,9 @@
         </div>
       </section>
     </a>
-    <a href="usabilitytest.html">
-      <section class="project">
-        <div class="card">
-          <img src="img/usabilitytestingcoverimg.jpg" alt="">
-        </div>
-        <div class="blurb">
-          <h3>Usability Testing</h3>
-          <h2>INRIX Open Car : Yelp and Napster</h2>
-          <div class="btn">View Process →</div>
-        </div>
-      </section>
-    </a>
-    <a href="wmt.html">
-      <section class="project">
-        <div class="card">
-          <img src="img/wmtcoverimg.png" alt="Where'z My Trailer">
-        </div>
-        <div class="blurb">
-          <h3>UX/UI Design</h3>
-          <h2>Where'z My Trailer</h2>
-          <div class="btn">View Process →</div>
-        </div>
-      </section>
-    </a>
-    <a href="game.html">
+   
+    
+    <!-- <a href="game.html">
       <section class="project">
         <div class="card">
           <img src="/img/gamethumbnail.jpg" alt="">
@@ -97,7 +99,7 @@
           <div class="btn">View Process →</div>
         </div>
       </section>
-    </a>
+    </a> -->
 
   </main>
 
